# project_template

./: AUTHORS.md  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  config.h.in
cmake/: AddInstallRPATHSupport.cmake  AddUninstallTarget.cmake  InstallBasicPackageFiles.cmake  Options.cmake  StandardFindModule.cmake  Version.cmake
doc/: CMakeLists.txt
src/: main.cpp
